# bazaar

./: .gitignore  Dockerfile  Earthfile  Makefile  NOTES.md  bazaar.install  bazaar.opam  bazaar_assets.ml  dune  dune-project  fly.toml  package-lock.json  ws.js  ws_1.js
bazaar/: bazaar.ml  bazaar_app.ml  channel_manager.ml  channel_manager.mli  counter.mlx  dune  endpoint.ml  index.mlx  index_live.mlx  layout.mlx  memory.ml  playground.ml  sidewinder_socket.ml  sidewinder_trail.mlx  user.ml
bazaar_js/: dune  ffi.ml  main.ml  package-lock.json  package.json
bazaar_live/: counter.mlx  dune  endpoint.ml  index.mlx  main.ml
extension/: key.pem  localhost.pem
extension/static/: main.js  style.css  video_overlay.html
go_gin_baseline/: fly.toml  go.mod  run.go
phoenix_bandit_baseline/: .gitignore  Dockerfile  README.md  fly.toml  mix.exs
phoenix_bandit_baseline/assets/: tailwind.config.js
phoenix_bandit_baseline/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
phoenix_bandit_baseline/lib/: phoenix_bandit_baseline.ex  phoenix_bandit_baseline_web.ex
phoenix_bandit_baseline/lib/phoenix_bandit_baseline/: application.ex  mailer.ex  release.ex  repo.ex
phoenix_bandit_baseline/lib/phoenix_bandit_baseline_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
phoenix_bandit_baseline/lib/phoenix_bandit_baseline_web/components/: core_components.ex  layouts.ex
phoenix_bandit_baseline/lib/phoenix_bandit_baseline_web/components/layouts/: root.html.heex
phoenix_bandit_baseline/lib/phoenix_bandit_baseline_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
phoenix_bandit_baseline/priv/repo/: seeds.exs
phoenix_bandit_baseline/test/: test_helper.exs
phoenix_bandit_baseline/test/phoenix_bandit_baseline_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
phoenix_bandit_baseline/test/support/: conn_case.ex  data_case.ex
rust_rocket_baseline/: Cargo.toml  Dockerfile  Rocket.toml  fly.toml
static/: config.html  video_overlay.html
