(executable
 (public_name bazaar_live)
 (name main)
 (preprocess
  (pps bytestring.ppx serde_derive))
 (libraries sidewinder trail nomad unix serde serde_json magic-mime))

(rule
 (target assets.ml)
 (deps ./certs/tls.crt ./certs/tls.key)
 (action
  (run ocaml-crunch ./certs --mode=plain --silent --output=%{target})))

(env
 (docker
  (flags
   (:standard -ccopt -static -cclib -no-pie))))
